# blog_examples

./: README.md  leet_test.py  new_test.py  test.py
decorators/deprecated_warning/: deprecated_warning_decorator.py  main.py  utils.py
decorators/retry_decorator/: main.py  retry_decorator.py  utils.py
decorators/singleton/: config.yaml  config_manager.py  main.py  singleton_decorator.py
mat_view/: .env.dev  docker-compose.yaml  pyproject.toml
mat_view/lib_manager/: Dockerfile  requirements.txt
mat_view/lib_manager/books/: models.py  urls.py  views.py
mat_view/lib_manager/lib_manager/: asgi.py  settings.py  urls.py  wsgi.py
