[tool.poetry]
name = "mat-view"
version = "0.1.0"
description = ""
authors = ["Michael_Interface <interfacemichael@gmail.com>"]
readme = "README.md"
packages = [{include = "mat_view"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
psycopg = "^3.1.19"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
